--- a/Index.html
+++ b/Index.html
@@ -1,87 +1,29 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-
-    <title>Video demo</title>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Brainter</title>
     <style>
-
-        /* Ensuring the video stretches to fill the entire viewport */
-
-        body, html {
-
-            margin: 0;
-
-            padding: 0;
-
-            height: 100%;
-
+        .video-container {
+            position: relative;
+            width: 100%;
+            padding-bottom: 56.25%; /* 16:9 aspect ratio */
+            height: 0;
             overflow: hidden;
-
         }
-
-        video {
-
-            width: 100vw;
-
-            height: 100vh;
-
-            object-fit: cover; /* This ensures the video covers the full viewport without distortion */
-
+        .video-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
         }
-
     </style>
-
 </head>
-
 <body>
-
-
-
-<video controls autoplay>
-
-    <source src="video.mp4" type="video/mp4">
-
-    Your browser does not support the video tag.
-
-</video>
-
-
-
-<script>
-
-    // Access the video element
-
-    var video = document.querySelector("video");
-
-
-
-    // Function to request fullscreen on video play
-
-    video.onplay = function() {
-
-        if (video.requestFullscreen) {
-
-            video.requestFullscreen();
-
-        } else if (video.webkitRequestFullscreen) { /* Safari */
-
-            video.webkitRequestFullscreen();
-
-        } else if (video.msRequestFullscreen) { /* IE11 */
-
-            video.msRequestFullscreen();
-
-        }
-
-    };
-
-</script>
-
-
-
+    <div class="video-container">
+        <iframe src="https://www.youtube.com/embed/7JicZhaV-Ko" frameborder="0" allowfullscreen></iframe>
+    </div>
 </body>
-
 </html>
